tests/ui/pattern/usefulness/issue-31221.stderr
error: unreachable pattern
  --> $DIR/issue-31221.rs:17:9
   |
LL |         Var3 => (),
   |         ^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |         Var2 => (),
   |         ^^^^^^^^^^ this arm is never executed
   |
note: the lint level is defined here
  --> $DIR/issue-31221.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/issue-31221.rs:23:9
   |
LL |         &Var3 => (),
   |         ^^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |         &Var2 => (),
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/issue-31221.rs:30:9
   |
LL |         (c, d) => (),
   |         ^^^^^^ this pattern is irrefutable; subsequent arms are never executed
LL |         anything => ()
   |         ^^^^^^^^^^^^^^ this arm is never executed

error: aborting due to 3 previous errors

